objects/Contribution_Change__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Neuer Beitrag</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Beitrags_nderung_ID__c</fullName>
        <label>Old Beitragsänderung ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Beitragsänderungen</relationshipLabel>
        <relationshipName>Contribution_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Beitragsänderung</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beitragsänderungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>X1st_Of_Month</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(DAY(Date__c) = 1)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Ungültige Datumsangabe. Es muss der Monatserste gewählt werden.</errorMessage>
    </validationRules>
</CustomObject>